# rust-roguelike

./: .gitignore  Cargo.toml  forum.md
scripts/: run.sh
src/: GridMap.rs  actions.rs  ai.rs  area.rs  cfg.rs  cockpit.rs  combat.rs  events.rs  game_log.rs  gmap.rs  gridref.rs  health.rs  inventory.rs  item.rs  loader.rs  locations.rs  main.rs  mob.rs  models.rs  ngridmap.rs  sectors.rs  ship.rs  state.rs  surfaces.rs  team.rs  utils.rs  view.rs  visibility.rs  visibility_system.rs
src/actions/: actions_system.rs  avatar_actions_system.rs  mod.rs
src/commons/: gird_string.rs  grid.rs  grid_string.rs  lineboundbox.rs  mod.rs  prob.rs  random_grid.rs  recti.rs  tree.rs  v2i.rs
src/models/: mod.rs
src/ship/: systems.rs
src/systems/: mod.rs  visibility_system.rs
src/view/: camera.rs  cockpit_window.rs  game_window.rs  lose_window.rs  main_menu_window.rs  mod.rs  window.rs
wasm/: index.html
