[package]
name = "rust-rogelike"
version = "0.1.0"
authors = ["sisso"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.8.*"
specs = "0.16.1"
specs-derive = "0.4.1"
log="0.4"
env_logger="0.8.*"
serde_json = "1.*"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
rand_distr = "0.4.0"
