[package]
name = "rust-rogelike"
version = "0.1.0"
authors = ["sisso"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { git = "https://github.com/amethyst/bracket-lib.git" }
hecs = "0.10.5"
log = "0.4"
env_logger = "0.10.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
glam = "0.29.0"
approx = "0.5.1"